# EnReach

./: .gitignore  LICENSE  README.md  metadata.yaml  pyproject.toml  requirements.txt
src/EnReach/: __init__.py  main.py
text_to_speech/: spell.py
